--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 ---
 layout: default 
+title: 
+banner: 
+  title: Mana Mei
+  subtitle: Liberation Through Movement Founder
+  subtitle-2: International Feminine Embodiedment Movement Leader
 ---
 
-<p class="bg-yellow-400"> This is some text on the homepage </p>
+<!-- Hero Banner -->
+<section class="min-h-90">
+    <h1>{{page.banner.title}}</h1>
+    <h2>{{page.banner.subtitle}}</h2>
+    <h2>{{page.banner.subtitle-2}}</h2>
+</section>
