--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ banner-2:
   image_path: /uploads/image-1.jpg
   image_path: /uploads/image-1.jpg
   image_path: /uploads/image-1.jpg
+about-mana:
+  heading: Meet Mana Mei
+  description_html: Hi, I’m Mana. And I am undeniably obsessed with movement.<br>I was blessed to find my passion very early in life.<br>I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life.<br>Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.<br>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies…
+  button: Learn more
 ---
 
 <!-- Hero Banner -->
@@ -42,4 +46,13 @@ banner-2:
     {% for item in page.banner-2 %}
     <div class="bg-image-style min-h-[20vh]" style="background-image: url('{{item.image_path}}');"></div>
     {% endfor %}
+</section>
+
+<!-- About Mana -->
+<section>
+    <h2>{{page.about-mana.heading}}</h2>
+    <div>
+        <p>{{page.about-mana.description_html}}</p>
+    </div>
+    <a href="/about.html">{{page.about-mana.button}}</a>
 </section>
