jekyll gallery - needs help!

--- a/about.html
+++ b/about.html
@@ -3,6 +3,52 @@ layout: default
 about-section: 
   heading: Meet Mana Mei
   description_html: Hi, I’m Mana. And I am undeniably obsessed with movement.<br>I was blessed to find my passion very early in life.<br>I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life.<br>Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.<br>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies.<br>For many years, I experienced deep trauma, toxic programming, and was time and time again fed the lies that I was just not good enough.<br>I found myself helplessly trapped in dark holes of depression, a victim to my own emotions, with words of self-hatred running loops in my mind.<br>But what I have also been blessed with discovering through dance, is the pathway out of the darkness, and into the light of my own radiant power.<br>This path is what I call Liberation Through Movement<br>The path did not reveal itself all at once, it came over many years of knowing somewhere deep in my body that I deserved a better, more fulfilling and pleasure-filled life.<br>Through my destined life journey and desire for expansion, I opened up to the vast world of spiritualism, embodiment, and alternative culture, while continuing to broaden my understanding of how to use dance for personal healing and transformation.<br>Through this glorious merging of modalities and experiences, I found the way back home to myself, and my passionate inspiration to help other women to do the same was ignited.<br>I am both an entrepreneur and an artist, now committed to being guided through life by pleasure, creativity, beauty, my inner wisdom, and ability to stand in my authentic expression.<br>And every day and at every crossroad, choosing to listen to my body as She continues to me home to my True Self and Feminine Power. 
+gallery: 
+ - column-size: col-span-2
+   aspect-ratio: landscapte
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: landscape-wide
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-3
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
+ - column-size: col-span-1
+   aspect-ratio: portrait
+   image_path: /uploads/image-1.jpg
 ---
 
 <!-- About Mana Mei -->
