--- a/offerings.html
+++ b/offerings.html
@@ -24,6 +24,19 @@ map:
       description: Mana Mei’s Keystone Offering! A 4-month deep dive into every facet of your personal embodiment, all Liberation Through Movement Practices, plus Level 1 Facilitation Training, birthing through the other side of this intimate and powerful container as an empowered woman and Embodied Feminine Leader.
       url: 
       image_path: 
+additional-offerings: 
+  heading: Additional Offerings
+  subheading: You are not alone!
+  description: Become a shining pillar of light in the Liberation Through Movement Community and connect with women around the world also on the Path of Embodied Healing.
+  offering: 
+   - title: Liberation Through Movement
+     type: Membership Community
+     description: Connect with like-minded embodied women all over the world in shared experience through monthly live online embodiment workshops and masterclasses. Receive unlimited access to the full Workshop Library of all past events. Feel seen and supported in your journey back home to yourself.
+     url: 
+   - title: Nectar Series
+     type: 12 Masterclass Package
+     description: Embark on an enchanting odyssey within your being, discovering all the flavors of the sweetest elixir- your own essence. This symphony of Masterclasses, Rituals, and Workshops created by Mana Mei for the Liberation Through Movement Community will provide you will expansive inspiration in your journey of Feminine Expression.
+     url: 
 ---
 
 <!-- Hero Banner -->
@@ -31,3 +44,6 @@ map:
 
 <!-- Map -->
 {% include map.html %}
+
+<!-- Additional Offerings -->
+{% include additional-offerings.html %}
