--- a/offerings.html
+++ b/offerings.html
@@ -47,3 +47,6 @@ additional-offerings:
 
 <!-- Additional Offerings -->
 {% include additional-offerings.html %}
+
+<!-- Masterclass Reply -->
+{% include optin-masterclass.html %}
