trouble shooting collections

--- a/offerings.html
+++ b/offerings.html
@@ -17,7 +17,7 @@ map:
     - title: Wisdom Body
       type: Online Program
       description: Through intentionally designed Movement Meditations, Somatic Dance Exercises, and Embodied Dance Journeys, you will touch deeper layers of your self-connection, expand your movement vocabulary, and explore vast realms of your authentic self expression.
-      url: 
+      url: /_courses/wisdom-body.md
       image_path: 
     - title: Liberation Through Movement Mentorship
       type: Online Program
