--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default 
 title: 
 header: 
-  logo: 
+  logo: /uploads/icons/manamei-11.png
   title: Mana Mei
   subtitle: Liberation Through Movement Founder
   subtitle-2: International Feminine Embodiedment Movement Leader
