--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ header:
   subtitle-2: International Feminine Embodiedment Movement Leader
   image_path: 
 banner-1: 
-  text_html: Come back home to your True Self<br>Reclaim your Feminine Power<br>Liberate your Fullest Self Expression
+  text_html: Come back home to your <span class="font-serif">True Self</span><br>Reclaim your <span class="font-serif">Feminine Power</span><br><span class="font-serif">Liberate</span> your <span class="font-serif">Fullest Self Expression</span>
 about-ltm:
   heading: What is Liberation Through Movement?
   description_html: Liberation Through Movement is a personal transformation and healing modality composed of intentionally crafted Embodied Movement and Somatic Dance Practices.<br>When you dive into the vast world of Liberation Through Movement, you are embarking on a life-changing journey into deep reconnection with all aspects of your TRUE SELF, remembering who you are, and coming back home to your inner sanctuary of SAFETY & FREEDOM<br>It is an all-in-one experience- mindfulness meditation, physical activation, and spiritual liberation.<br>It connects the energetic and physical bodies- heightening your inner wisdom and allowing you to meet thus world in full authentic expression<br>It awakens your authentic and unique expression by surpassing the language of the mind and accessing deep layers of intuitive knowing.<br>Liberation Through Movement HEALS- by way of returning you to your innate wholeness, reclaiming fragmented and forgotten aspects of your Self, and creating a safe container for you to step back into the driver seat of your life.<br>Quiet your Mind. Activate your Body. Awaken your Spirit.
