--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ about-ltm:
   description_html: <p>Liberation Through Movement is a personal transformation and healing modality composed of intentionally crafted Embodied Movement and Somatic Dance Practices.</p><p>When you dive into the vast world of Liberation Through Movement, you are embarking on a life-changing journey into deep reconnection with all aspects of your TRUE SELF, remembering who you are, and coming back home to your inner sanctuary of SAFETY & FREEDOM</p><p>It is an all-in-one experience- mindfulness meditation, physical activation, and spiritual liberation.</p><p>It connects the energetic and physical bodies- heightening your inner wisdom and allowing you to meet thus world in full authentic expression</p><p>It awakens your authentic and unique expression by surpassing the language of the mind and accessing deep layers of intuitive knowing.</p><p>Liberation Through Movement HEALS- by way of returning you to your innate wholeness, reclaiming fragmented and forgotten aspects of your Self, and creating a safe container for you to step back into the driver seat of your life.</p><span class="text-md-serif text-feature">Quiet your Mind. Activate your Body. Awaken your Spirit.</span>
   background_image: /uploads/images/manamei-16.jpg
 banner-2: 
- - image_path: 
- - image_path: 
- - image_path: 
+ - image_path: /uploads/icons/manamei-1.png
+ - image_path: /uploads/icons/manamei-2.png
+ - image_path: /uploads/icons/manamei-3.png
 about-mana:
   heading: Meet Mana Mei
   description_html: Hi, I’m Mana. And I am undeniably obsessed with movement.<br>I was blessed to find my passion very early in life.<br>I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life.<br>Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.<br>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies…
