about-mana-home

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ banner-2:
  - image_path: /uploads/icons/manamei-3.png
 about-mana:
   heading: Meet Mana Mei
-  description_html: Hi, I’m Mana. And I am undeniably obsessed with movement.<br>I was blessed to find my passion very early in life.<br>I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life.<br>Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.<br>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies…
+  description_html: <p>Hi, I’m Mana. And I am undeniably obsessed with movement.</p><p>I was blessed to find my passion very early in life.</p><p>I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life.</p><p>Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.</p><p>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies…</p>
   button: Learn more
-  image_path: 
+  background_image: /uploads/images/manamei-39.jpg
 start-here:
   heading: Mana Movement Foundations
   description_html: Discover the perfect daily practice that will guide you towards a deeper sense of wholeness, peace, radiance, and empowerment. This course is your gateway to embodying your most authentic self. It's more than a practice; it's a path to rediscovering your inner strength.
