--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ start-here:
     text: Enroll now
     url: https://sso.teachable.com/secure/487916/checkout/3804105/mana-movement
   video_url: https://www.youtube.com/embed/5sEVM981_X0?si=ZQjVEKlLQNLUTPLR
-  image_path: 
+  background_image: uploads/backgrounds/manamei-1.png
 testimonials:
  - testimonial: I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days, weeks, and years to come, watching the magic unfold.
    author: Minou Sadeghi, Embodied Temple Keeper
