--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@ start-here:
   video_url: https://www.youtube.com/embed/5sEVM981_X0?si=ZQjVEKlLQNLUTPLR
   background_image: uploads/backgrounds/manamei-1.png
 testimonials:
- - testimonial: I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days, weeks, and years to come, watching the magic unfold.
-   author: Minou Sadeghi, Embodied Temple Keeper
- - testimonial: I am allowing energy to move through me, finding my own medicine, and the power in sisterhood continually helps me to come home to myself. I am eternally grateful
-   author: Julie De Lorenzo
+  background_image: /uploads/images/manamei-1.jpg
+  icon_image: /uploads/icons/manamei-17.png
+  testimonials:
+   - testimonial: I feel infinitely grateful and blessed to have this opportunity to immerse myself and fully receive Mana’s wisdom, teachings and practices at such a potent time in the evolution of consciousness, and will continue daily with these rituals for the days, weeks, and years to come, watching the magic unfold.
+     author: Minou Sadeghi, Embodied Temple Keeper
+   - testimonial: I am allowing energy to move through me, finding my own medicine, and the power in sisterhood continually helps me to come home to myself. I am eternally grateful
+     author: Julie De Lorenzo
 ---
 
 <!-- Hero Banner -->
