--- a/about.html
+++ b/about.html
@@ -4,6 +4,14 @@ about-section:
   background_image: /uploads/images/manamei-4.jpg
   heading: Meet Mana Mei
   description_html: <p>Hi, I’m Mana. And I am undeniably obsessed with movement.</p><p>I was blessed to find my passion very early in life. I first stepped foot in a dance studio at age 3. And from then on, I have continued to step foot onto a dance floor nearly every day of my life. Since that fateful day 33 years ago, my life journey has been fueled by my absolutely unwavering obsession with dance.</p><p>But life as a dancer hasn’t always been glory and fame, rainbows and butterflies For many years, I experienced deep trauma, toxic programming, and was time and time again fed the lies that I was just not good enough. I found myself helplessly trapped in dark holes of depression, a victim to my own emotions, with words of self-hatred running loops in my mind.</p><p>But what I have also been blessed with discovering through dance, is the pathway out of the darkness, and into the light of my own radiant power. This path is what I call Liberation Through Movement. The path did not reveal itself all at once, it came over many years of knowing somewhere deep in my body that I deserved a better, more fulfilling and pleasure-filled life. Through my destined life journey and desire for expansion, I opened up to the vast world of spiritualism, embodiment, and alternative culture, while continuing to broaden my understanding of how to use dance for personal healing and transformation. Through this glorious merging of modalities and experiences, I found the way back home to myself, and my passionate inspiration to help other women to do the same was ignited.</p><p>I am both an entrepreneur and an artist, now committed to being guided through life by pleasure, creativity, beauty, my inner wisdom, and ability to stand in my authentic expression. And every day and at every crossroad, choosing to listen to my body as She continues to me home to my True Self and Feminine Power.</p>
+cta: 
+  type: e-book
+  heading_html: Liberation Through Movement<br>Free E-Book
+  subtitle: A guide to transmuting stagnant energy into activated feminine power
+  description: A new experiential guide on how to reclaim freedom in the body, cultivate peace and wholeness, and show up in the world as a fully expressed woman.
+  background:
+    background_image: /uploads/backgrounds/manamei-2.jpg
+    background_position: bottom
 gallery: 
  - image_path: /uploads/images/manamei-45.jpg
    seo-description: 
@@ -34,8 +42,8 @@ gallery:
 <!-- About Mana Mei -->
 {% include about-mana.html %}
 
-<!-- E-Book Opt-In -->
-{% include optin-ebook.html %}
+<!-- Opt-In -->
+{% include optin.html %}
 
 <!-- Image Gallery -->
 {% include gallery-mana.html %}
