--- a/offerings.html
+++ b/offerings.html
@@ -9,22 +9,22 @@ map:
       type: Online Program
       description: Begin your Embodiment journey by learning this simple yet powerful practice, designed for all women. This is the perfect place to begin, or deepen your practice of using movement as a daily ritual for awakening and connecting to your Feminine Power and returning to inner balance and clarity.
       url: 
-      image_path: 
+      image_path: /uploads/icons/manamei-14.png
     - title: Mana Movement Full Course
       type: Online Program
       description: Take the next step to deepen your MANA Movement Practice in this 10 module full course which will take you through the detailed breakdown and practice of all elements of the MANA Movement Practice. This expanded course will teach you new exercise and movement not included in the Foundations Course.
       url: 
-      image_path: 
+      image_path: /uploads/icons/manamei-15.png
     - title: Wisdom Body
       type: Online Program
       description: Through intentionally designed Movement Meditations, Somatic Dance Exercises, and Embodied Dance Journeys, you will touch deeper layers of your self-connection, expand your movement vocabulary, and explore vast realms of your authentic self expression.
       url: /_courses/wisdom-body.md
-      image_path: 
+      image_path: /uploads/icons/manamei-16.png
     - title: Liberation Through Movement Mentorship
       type: Online Program
       description: Mana Mei’s Keystone Offering! A 4-month deep dive into every facet of your personal embodiment, all Liberation Through Movement Practices, plus Level 1 Facilitation Training, birthing through the other side of this intimate and powerful container as an empowered woman and Embodied Feminine Leader.
       url: 
-      image_path: 
+      image_path: /uploads/icons/manamei-13.png
 additional-offerings: 
   heading: Additional Offerings
   subheading: You are not alone!
