masterclass replay optin

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ cta:
   type: e-book
   heading_html: Liberation Through Movement<br>Free E-Book
   subtitle: A guide to transmuting stagnant energy into activated feminine power
-  description: A new experiential guide on how to reclaim freedom in the body, cultivate peace and wholeness, and show up in the world as a fully expressed woman.
+  description_html: A new experiential guide on how to reclaim freedom in the body, cultivate peace and wholeness, and show up in the world as a fully expressed woman.
   background:
     background_image: /uploads/backgrounds/manamei-2.jpg
     background_position: bottom
