--- a/offerings.html
+++ b/offerings.html
@@ -38,6 +38,14 @@ additional-offerings:
      type: 12 Masterclass Package
      description: Embark on an enchanting odyssey within your being, discovering all the flavors of the sweetest elixir- your own essence. This symphony of Masterclasses, Rituals, and Workshops created by Mana Mei for the Liberation Through Movement Community will provide you will expansive inspiration in your journey of Feminine Expression.
      url: 
+cta: 
+  type: masterclass-reply
+  heading_html: Liberation Through Movement<br>
+  subtitle: Free Masterclass Replay
+  description_html: <p>This is the perfect resource for anyone interested to learn more about the HOW and WHY the Liberation Through Movement Modality for Healing works.</p><p>In this experiential movement Masterclass where you will be introduced to the Liberation Through Movement Model- a 3-pillar process for taking the leap from feeling disconnected to arriving in life as a liberated and embodied woman.</p><p>I cover in depth the elements needed for you to take the journey back home to your True Self and arrive in a more satisfying experience of life, one in which you feel able to navigate the ups and downs of life from a place of grounded presence and safety.</p><p>You will also have the opportunity to be guided through an LTM Movement process to experience it yourself!</p>
+  background: 
+    background_image: /uploads/images/manamei-30.jpg
+    background_position: top
 ---
 
 <!-- Hero Banner -->
@@ -50,4 +58,4 @@ additional-offerings:
 {% include additional-offerings.html %}
 
 <!-- Masterclass Reply -->
-{% include optin-masterclass.html %}
+{% include optin.html %}
