--- a/offerings.html
+++ b/offerings.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Mana Movement Map
+title: Offerings
 map: 
   heading: A lifechanging journey
   description: The following is an outline of the path you will be guided through if you feel called to choose Mana Mei and Liberation Through Movement as your guiding light for this next thread in the weaving of your life journey. If you take this journey, IT WILL CHANGE YOUR LIFE.
