--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@ cta:
   background:
     background_image: /uploads/backgrounds/manamei-2.jpg
     background_position: bottom
+    overlay: yes
 gallery: 
  - image_path: /uploads/images/manamei-45.jpg
    seo-description: 
