--- a/offerings.html
+++ b/offerings.html
@@ -52,7 +52,7 @@ cta:
 {% include hero-banner-offerings.html %}
 
 <!-- Map -->
-{% include map.html %}
+{% include map-mobile.html %}
 
 <!-- Additional Offerings -->
 {% include additional-offerings.html %}
