index mobile fixes

--- a/offerings.html
+++ b/offerings.html
@@ -46,6 +46,7 @@ cta:
   background: 
     background_image: /uploads/images/manamei-30.jpg
     background_position: top
+    overlay: true
 ---
 
 <!-- Hero Banner -->
