--- a/liberation-through-movement.html
+++ b/liberation-through-movement.html
@@ -40,50 +40,100 @@ video:
   show: true
   url:
 course-description:
-  heading: Discover the essence of Wisdom Body
+  heading: Discover Liberation Through Movement
   description: >-
-    This program is a personal deep dive into 12 powerful embodied movement and
-    somatic dance practices - broken down into 4 themed-modules including 3
-    practices each, Movement Meditation, Somatic Activation, Embodied Liberation
+    Humans are social creatures, we need each other. When we come together in
+    community and shared passion, we help give each other the support,
+    inspiration, and strength needed to align with our true nature, our
+    radiance, and our ability to thrive.
+     
+    As women, it is our time to rise together. To remind each other that we are
+    not alone in our journey. That we are worthy to be living lives filled with
+    joy and unwavering peace. And that we can experience the growth we desire
+    through creativity and pleasure- the feminine way.
+
+    ​
+
+    ​
+
+    ​
+
+    ​
+
+    ​
+
+    ​
+
+    LIBERATION THROUGH MOVEMENT IS AN ONLINE GLOBAL TRIBE FOR WOMEN
+
+    WHO ARE READY TO:
+
+    ​
+
+    Let go of the need to push to find their place and worth in the world
+
+    Gain the knowledge needed to realign with their feminine way of expansion
+
+    Learn new embodiment practices and participate in unique life-changing
+    experiences
+
+    Awaken and celebrate their feminine expressions - finding safety and
+    pleasure in feeling
+
+    Be supported by women all over the world, held in a container of safety and
+    permission
+
+    ​
+
+    ​
+
+    ​
+
+    As a member of this tribe, you will have exclusive access to weekly
+    embodiment events & workshops curated by world class facilitators. You will
+    connect with hundreds of women around the globe through these powerful
+    shared experiences, and remember at every moment that you  are not alone. We
+    are here for you, dancing beside you, celebrating you along your journey.
+     
+    So are you ready to spread your wings?
+
+    Are you ready for your next evolution of embodied liberation?
+
+    ​
+
+    THIS IS YOUR TRIBE, LADIES. Welcome Home.
   module:
     - image_path: /uploads/icons/manamei-7.png
-      title: Meditation
+      title: The Need
       description_html: >-
-        <p>Learn to relax the mind and surrender into full awareness &
-        acceptance of the feeling body.</p><p>Gain the tools to come into an
-        embodied presence at every moment of your life.<br>Move through your
-        daily life with ease, while never losing connection to your internal
-        wisdom.</p>
+        <p>There are so many uncertainties that make life feel challenging, too
+        hard, and can leave you feeling unsafe, out of energy and
+        uninspired.</p>
     - image_path: /uploads/icons/manamei-5.png
-      title: Activation
+      title: The Tribe
       description_html: >-
-        <p>Increase your movement vocabulary, expanding your capacity to express
-        yourself through dance.<br>Activate your whole-body awareness, fluidity,
-        and kinesthetic body intelligence.</p><p>Learn new somatic movement
-        practices, exploring the infinite movement pathways, and expanding your
-        skill set for how to effectively express through your body.</p>
+        <p>Realign with the beautiful, feminine flow of life that you
+        deserve.</p>
     - image_path: /uploads/icons/manamei-6.png
-      title: Liberation
+      title: The Offering
       description_html: >-
-        <p>Explore, unlock, and celebrate ALL of your Feminine
-        expressions.</p><p>Harness the power of all of your emotions and
-        transmute this energy into movement for manifestation and
-        creation.</p><p>Learn how to use movement as a prayer and devotional
-        practice to yourself, weaving together your dreams with your
-        reality.</p><p>Become the creatrix of your life and empower yourself to
-        take inspired action, the feminine way, with fluidity and grace.</P
+        <p>Cultivate life-long deep and authentic connections with sisters all
+        around the world.</p>
 who-its-for:
-  heading: Who the Wisdom Body Immersion is for
-  description_html: "<p>Anyone who wants to go deeper, who may already have some experience in embodied movement, or whose already playing with using dance and movement as part of their personal development and healing modality, but wants more options, tools, guidance, and inspiration.</p><p>People that are new to embodied dance, that are interested in diving into this level of freedom through movement,\_exploring authenticity and personal expression.</p>"
+  heading: Who the Liberation Through Movement is for
+  description_html: >-
+    <p>Liberation Through Movement is for women who value freedom of expression
+    and the cultivation of embodied feminine power. This tribe was created for
+    you, WELCOME HOME.</p>
   background-image:
-    background_image: /uploads/images/manamei-17.jpg
+    background_image: /uploads/images/manamei-10.jpg
     image_focus: center
 inside-the-course:
-  heading: Inside the Wisdom Body Immersion
+  heading: Delete this section
   description_html: >-
-    In Wisdom Body, each module brings a new dimension of understanding. Our
+    <p>In Wisdom Body, each module brings a new dimension of understanding. Our
     program is structured in four modules, each offering a comprehensive
-    approach to embodied awareness and expression.
+    approach to embodied awareness and expression.</p>
   module:
     - title: Module 1
       description_html: This is a lengthy answer.
@@ -113,7 +163,7 @@ inside-the-course:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: bottom
 testimonials:
-  background_image: /uploads/images/manamei-20.jpg
+  background_image: /uploads/backgrounds/manamei-4.jpg
   testimonials:
     - testimonial: This is a testimonial
       author: Regina Philange
@@ -122,23 +172,40 @@ testimonials:
 instructor:
   show: true
 investment:
-  heading: Investment
+  heading: The Offering
   includes:
     heading: What's included
     list:
-      - list-item: 12 guided audio and video practices
-      - list-item: Written theory and journaling prompts
-      - list-item: Lifetime access to program materials
-      - list-item: Access to the private wisdom body Facebook group
+      - list-item: 1 monthly embodied movement experience with Mana Mei
       - list-item: >-
-          2-months free membership to the liberation through movement online
-          community
+          1 monthly guided experience with embodied temple keeper or a guest
+          facilatotr embodiement experience
+      - list-item: >-
+          1 seasonal women's witnessing circle hosted by an embodied temple
+          keeper
+      - list-item: Access to all replays of monthly offerings
+      - list-item: >-
+          Access to all replays of Mana Mei's previous offerings, including
+          Prosperity Bloom, The Joyous Body, Grief & Rage Ritual, Liberation
+          Through Movement 5-Day Journey, (We Are) The Alchemists, and Dance
+          Medicine 5-Day Journey
+      - list-item: >-
+          Special VIP discounts for Immersions and Courses run by Mana Mei,
+          including MANA Ritual Movement, Wisdom Body, and Embodied Temple
+          Keepers
+      - list-item: >-
+          A platform that we  OWN as a community where you can post and share
+          about your journey CENSORSHIP-FREE! (yah, it’s about time! Let the
+          nipples flow)
+      - list-item: >-
+          The opportunity to cultivate life-long deep and authentic connections
+          with sisters all around the world - this is priceless!
   pricing:
     pay-in-full:
-      heading: Pay in full
-      price: $300
+      heading: Monthly Membership
+      price: $12.99
     payment-plan:
-      show: true
+      show: false
       heading: Payment plan
       price: $180 x 12 months
 faq:
@@ -196,17 +263,19 @@ faq:
     background_image: /uploads/backgrounds/manamei-3.jpg
     image_focus: bottom right
 cta:
-  heading: Something greater
+  heading: Welcome home
   description_html: >-
-    <p>There is something much greater than you or me, or our physical bodies
-    and minds, that exists in the unseen world and is the source of what we call
-    magic, and which is always working to bring us back into alignment with our
-    divine path and purpose - that something is your Wisdom Body.</p><p>This
-    immersion will provide you with the tools & experiences to help you
-    reconnect with your own Wisdom Body and step into your full power.</p>
+    <p>Humans are social creatures, we need each other. When we come together in
+    community and shared passion, we help give each other the support,
+    inspiration, and strength needed to align with our true nature, our
+    radiance, and our ability to thrive.</p><p>As women, it is our time to rise
+    together. To remind each other that we are not alone in our journey. That we
+    are worthy to be living lives filled with joy and unwavering peace. And that
+    we can experience the growth we desire through creativity and pleasure- the
+    feminine way.​</p>
   button:
-    text: Enroll now
-    url:
+    text: Join the tribe
+    url: https://liberationthroughmovement.mn.co
   background-image:
     background_image: /uploads/images/manamei-22.jpg
     background-position: center
